laboratorios/laboratorio3/parte2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcc-python-helloworld
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: lab3p2.vcc-test.link
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:620241740192:certificate/94522d6d-e7be-47fe-848e-2f52c6838335
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vcc-python-helloworld
            port:
              number: 5000
